--- a/FTC-Timer-Display/App.config
+++ b/FTC-Timer-Display/App.config
@@ -1,81 +1,97 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <userSettings>
-        <FTC_Timer_Display.Properties.Settings>
-            <setting name="FieldList" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="SoundLocation" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="LastMode" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="LastDivision" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="LastDivisionName" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LastFieldID" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="ScoringServerLocation" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="ScoringScroll" serializeAs="String">
-                <value>10</value>
-            </setting>
-            <setting name="showHelp" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="customLogoPath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="displayShowDateTime" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="isMultiDivision" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="eventType" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="autoElimTimeouts" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="preventRunningMovement" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="useCountdown" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </FTC_Timer_Display.Properties.Settings>
-    </userSettings>
-    <applicationSettings>
-        <FTC_Timer_Display.Properties.Settings>
-            <setting name="DeadFieldDelay" serializeAs="String">
-                <value>5</value>
-            </setting>
-            <setting name="DefaultScoringPort" serializeAs="String">
-                <value>5656</value>
-            </setting>
-        </FTC_Timer_Display.Properties.Settings>
-    </applicationSettings>
-    <appSettings>
-        <!-- Enable log4net debugging-->
-        <add key ="log4net.Internal.Debug" value="false"/>
-    </appSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <userSettings>
+    <FTC_Timer_Display.Properties.Settings>
+      <setting name="FieldList" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SoundLocation" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="LastMode" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="LastDivision" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="LastDivisionName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LastFieldID" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="ScoringServerLocation" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ScoringScroll" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="showHelp" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="customLogoPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="displayShowDateTime" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="isMultiDivision" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="eventType" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="autoElimTimeouts" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="preventRunningMovement" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="useCountdown" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="useLargeActive" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </FTC_Timer_Display.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <FTC_Timer_Display.Properties.Settings>
+      <setting name="DeadFieldDelay" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="DefaultScoringPort" serializeAs="String">
+        <value>5656</value>
+      </setting>
+    </FTC_Timer_Display.Properties.Settings>
+  </applicationSettings>
+  <appSettings>
+    <!-- Enable log4net debugging-->
+    <add key="log4net.Internal.Debug" value="false" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
