--- a/FTC-Timer-Display/Properties/Settings.settings
+++ b/FTC-Timer-Display/Properties/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="useCountdown" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="useLargeActive" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
