--- a/FTC-Timer-Display/App.config
+++ b/FTC-Timer-Display/App.config
@@ -45,7 +45,7 @@
         <value />
       </setting>
       <setting name="displayShowDateTime" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="isMultiDivision" serializeAs="String">
         <value>True</value>
@@ -63,6 +63,12 @@
         <value>False</value>
       </setting>
       <setting name="useLargeActive" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="skipWelcome" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="showDisplayFieldNumbers" serializeAs="String">
         <value>True</value>
       </setting>
     </FTC_Timer_Display.Properties.Settings>
