--- a/FTC-Timer-Display/Properties/Settings.settings
+++ b/FTC-Timer-Display/Properties/Settings.settings
@@ -39,7 +39,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="displayShowDateTime" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="isMultiDivision" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
@@ -57,6 +57,12 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="useLargeActive" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="skipWelcome" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="showDisplayFieldNumbers" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
