--- a/FTC-Timer-Display/App.config
+++ b/FTC-Timer-Display/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FTC_Timer_Display.Properties.logging" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="FTC_Timer_Display.logging" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -13,6 +15,22 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <userSettings>
+    <FTC_Timer_Display.Properties.logging>
+      <setting name="logMatchDataChanges" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="logInitialSetupSteps" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="logSingleClientChanges" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </FTC_Timer_Display.Properties.logging>
+    <FTC_Timer_Display.logging>
+      <setting name="logMatchDataChanges" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </FTC_Timer_Display.logging>
     <FTC_Timer_Display.Properties.Settings>
       <setting name="FieldList" serializeAs="String">
         <value />
