Fixed #79, Fixed #73, Fixed DesignTime Settings window bug.
Signed-off-by: mglennon <mglennon@nsandd.com>

--- a/FTC-Timer-Display/FTC-Timer-Display.csproj
+++ b/FTC-Timer-Display/FTC-Timer-Display.csproj
@@ -539,6 +539,7 @@
     <None Include="Resources\G9.png" />
     <None Include="Resources\Gcolon.png" />
     <None Include="Resources\Gcolonoff.png" />
+    <None Include="Resources\FIRST-Regional-InVirginia-Icon-v-allBlack.png" />
     <Content Include="Sounds\GameSounds\charge.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
