--- a/ArduinoComms/ArduinoComms.csproj
+++ b/ArduinoComms/ArduinoComms.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +43,17 @@
   <ItemGroup>
     <Compile Include="CommController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerialSettings.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SerialSettings.Designer.cs">
+      <DependentUpon>SerialSettings.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SerialSettings.resx">
+      <DependentUpon>SerialSettings.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
