--- a/FTC-Timer-Display/FTC-Timer-Display.csproj
+++ b/FTC-Timer-Display/FTC-Timer-Display.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Speech" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
@@ -99,6 +100,13 @@
     <Compile Include="AndroidComponents\WebserverWindow.Designer.cs">
       <DependentUpon>WebserverWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArduinoComm\ArduinoController.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ArduinoComm\ArduinoController.Designer.cs">
+      <DependentUpon>ArduinoController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ArduinoComm\ArduinoMessage.cs" />
     <Compile Include="ClientReply.cs" />
     <Compile Include="ClockFace.cs">
       <SubType>UserControl</SubType>
@@ -300,6 +308,9 @@
     <Compile Include="UdpClient\UdpContainer.cs" />
     <EmbeddedResource Include="AndroidComponents\WebserverWindow.resx">
       <DependentUpon>WebserverWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ArduinoComm\ArduinoController.resx">
+      <DependentUpon>ArduinoController.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ClockFace.resx">
       <DependentUpon>ClockFace.cs</DependentUpon>
