Update versioning and images for 2016-2017 season

--- a/FTC-Timer-Display/FTC-Timer-Display.csproj
+++ b/FTC-Timer-Display/FTC-Timer-Display.csproj
@@ -568,6 +568,7 @@
     <None Include="Resources\Gcolon.png" />
     <None Include="Resources\Gcolonoff.png" />
     <None Include="Resources\FIRST-Regional-InVirginia-Icon-v-allBlack.png" />
+    <None Include="Resources\vortexlogo.png" />
     <Content Include="Sounds\GameSounds\charge.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
